--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,7 @@
   justify-content: space-between;
 }
 
-.data-table {
+.grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
-}
-
-.freq-table {
-  display: grid;
-
 }
