--- a/src/components/DataTable/DataTable.css
+++ b/src/components/DataTable/DataTable.css
@@ -4,7 +4,7 @@ table {
 th {
     background-color: #111;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
     padding: 10px;
     border: 1px solid #ccc;
 }
